@@ -1,3 +1,10 @@
+Sat Apr  4 03:39:28 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * ciao/ComponentServer/CIAO_ComponentServer_Impl.cpp:
+        * ciao/ComponentServer/CIAO_Container_Impl.cpp:
+
+          Ficed a couple memory management issues. 
+        
 Mon Mar 23 12:51:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ciao/Logger/File_Logger_Backend.h
